made all blog cards uniformed. fixed the grid to match design. hid use effects on grad videos that were causing errors in the console. added images and a tag to blog cards.added toast to dashboard for error viewing and successful creations. reorganized state to be more readable in dashboard.

--- a/src/components/LandingPage/landingPage.css
+++ b/src/components/LandingPage/landingPage.css
@@ -12,15 +12,15 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  * Basic styles
  */
 
- body {
-   margin: 0;
-   background-color: #24282D;
- }
+body {
+  margin: 0;
+  background-color: #24282d;
+}
 
- .landing-body {
-  background-color: #24282D;
-  font-family: 'Jost', sans-serif;
- }
+.landing-body {
+  background-color: #24282d;
+  font-family: "Jost", sans-serif;
+}
 
 .box1 {
   color: white;
@@ -28,14 +28,15 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 1rem;
   margin: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* height: 35vh; */
 }
 
 .wrapper {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 125px) 56px 125px;
-  grid-auto-rows: minmax(18vh, auto);
+  /* grid-template-rows: repeat(3, 125px) 56px 125px;
+  grid-auto-rows: minmax(18vh, auto); */
   margin: 1rem;
 }
 
@@ -44,13 +45,13 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .box2 {
-  background-color: #31363F;
+  background-color: #31363f;
   grid-column-start: 2;
   grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 4;
   grid-column: 2/4;
-  grid-row: 2/4;
+  grid-row: 2/3;
 }
 
 .main-nav {
@@ -59,7 +60,28 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   grid-row-start: 4;
   grid-row-end: 5;
   grid-column: 1/5;
-  grid-row: 4/5;
+  grid-row: 3/5;
+}
+
+/* Blog Card CSS */
+
+#blog-card-image {
+  height: 20vh;
+}
+
+.blog-card-title {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-top: 5px;
+  overflow: hidden;
+}
+
+.blog-card-category {
+  font-size: 0.9rem;
+  border: 2px solid rgb(65, 214, 225);
+  width: 50%;
+  font-weight: bold;
+  padding: 3px 3px 3px 5px;
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
